cswap/src/snapshots/cswap__transforms__tests__find_var_refs_snap.snap
---
source: cswap/src/transforms.rs
expression: vrs
---
[
    (
        NotBox(
            RefCell {
                value: Symbol(
                    RefCell {
                        value: Token(
                            "y",
                        ),
                    },
                ),
            },
        ),
        Bool,
    ),
    (
        NotBox(
            RefCell {
                value: Symbol(
                    RefCell {
                        value: Token(
                            "x",
                        ),
                    },
                ),
            },
        ),
        Dec,
    ),
    (
        NotBox(
            RefCell {
                value: Symbol(
                    RefCell {
                        value: Token(
                            "x",
                        ),
                    },
                ),
            },
        ),
        Dec,
    ),
]
