cswap/src/snapshots/cswap__transforms__tests__fp_between_snap.snap
---
source: cswap/src/transforms.rs
expression: s
---
(= (and (fp.gt VAR (_ +zero 11 53)) (fp.lt VAR (_ +oo 11 53))) {})
