cswap/src/snapshots/cswap__transforms__tests__get_idm_consts_snap.snap
---
source: cswap/src/transforms.rs
expression: "Script::Commands(idm.1)"
---
(assert (= INTER_CMON1 (= a b)))
(assert (= INTER_CMON2 (= yy zz)))
(assert (= INTER_CMON3 (< yy zz)))
(assert (= INTER_CMON4 (> yy zz)))
(assert (= INTER_CMON5 (= yy 111)))
(assert (= INTER_CMON6 (< yy 111)))
(assert (= INTER_CMON7 (> yy 111)))
(assert (= INTER_CMON8 (= yy 222)))
(assert (= INTER_CMON9 (< yy 222)))
(assert (= INTER_CMON10 (> yy 222)))
(assert (= INTER_CMON11 (= zz 111)))
(assert (= INTER_CMON12 (< zz 111)))
(assert (= INTER_CMON13 (> zz 111)))
(assert (= INTER_CMON14 (= zz 222)))
(assert (= INTER_CMON15 (< zz 222)))
(assert (= INTER_CMON16 (> zz 222)))
(assert (= INTER_CMON17 (= 111 222)))
(assert (= INTER_CMON18 (< 111 222)))
(assert (= INTER_CMON19 (> 111 222)))
(assert (= INTER_CMON20 (= mmmm nnnn)))
(assert (= INTER_CMON21 (fp.eq AAAAA BBBBB)))
(assert (= INTER_CMON22 (fp.lt AAAAA BBBBB)))
(assert (= INTER_CMON23 (fp.gt AAAAA BBBBB)))
(assert (= INTER_CMON24 (= XXXXX YYYYY)))

