cswap/src/snapshots/cswap__transforms__tests__get_subset_consts_snap.snap
---
source: cswap/src/transforms.rs
expression: subset
---
Some(
    [
        (
            "c",
            Bool,
        ),
        (
            "d",
            UInt,
        ),
        (
            "e",
            UInt,
        ),
    ],
)
