cswap/src/snapshots/cswap__transforms__tests__grab_all_decls_snap.snap
---
source: cswap/src/transforms.rs
expression: "Script::Commands(grab_all_decls(&p))"
---
(define-sort myset  () (Set (Set (_ BitVec 1))))
(declare-const x Int)
(declare-fun z () Bool)
(declare-const y Real)

