cswap/src/snapshots/cswap__transforms__tests__grab_all_decls_with_duplicate_snap.snap
---
source: cswap/src/transforms.rs
expression: "Script::Commands(grab_all_decls(&p))"
---
(declare-const x Int)
(define-funs-rec ((y ((v0 a6)) a4)) (c4$2))

